@@ -4,6 +4,9 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import paymentsystem.mapper.CustomerMapper;
 import paymentsystem.model.dto.CustomerDto;
@@ -34,7 +37,9 @@ public class CustomerServiceImpl implements CustomerService {
     }
 
     @Override
-    public List<CustomerDto> getAllCustomers() {
-        return customerRepository.findAll().stream().map(customerMapper::mapToCustomerDto).collect(Collectors.toList());
+    public Page<CustomerDto> getAllCustomers(Pageable pageable) {
+        Page<CustomerEntity> customerEntityPage = customerRepository.findAll(pageable);
+        List<CustomerDto> customerDtoList = customerEntityPage.getContent().stream().map(customerMapper::mapToCustomerDto).toList();
+        return new PageImpl<>(customerDtoList, pageable, customerEntityPage.getTotalElements());
     }
 }
