@@ -4,6 +4,9 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import paymentsystem.exception.exceptions.IncorrectPasswordException;
 import paymentsystem.exception.exceptions.PasswordsMatchException;
@@ -18,7 +21,6 @@ import paymentsystem.model.enums.UserStatus;
 import paymentsystem.repository.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -95,9 +97,10 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<UserDto> getAllUsers() {
-        List<UserEntity> userEntityList = userRepository.findByStatus(UserStatus.ACTIVE);
-        return userEntityList.stream().map(userMapper::mapToUserDto).collect(Collectors.toList());
+    public Page<UserDto> getAllUsers(Pageable pageable) {
+        Page<UserEntity> userEntityPage = userRepository.findByStatus(UserStatus.ACTIVE, pageable);
+        List<UserDto> userDtoList = userEntityPage.getContent().stream().map(userMapper::mapToUserDto).toList();
+        return new PageImpl<>(userDtoList, pageable, userEntityPage.getTotalElements());
     }
 }
 
